--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,7 +8,7 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <div id="player">
@@ -22,8 +22,8 @@
            </div>
        </div>
     </div>
-    <script src="./data.js"></script>
-    <script src="./player.js"></script>
-    <script src="./index.js"></script>   
+    <script src="../data.js"></script>
+    <script src="../player.js"></script>
+    <script src="../index.js"></script>   
 </body>
 </html>
