--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Player</title>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <link rel="stylesheet" href="../style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Music Player</title>
+  </script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js">
+  <link rel="icon" href="favicon.ico" />
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <div id="player">
-       <h4><i class="material-icons">equalizer</i> Strong</h4> 
-       <div class="card no-margin">
-           <div class="card-image"></div>
-           <div class="card-content">
-               <h5>Title</h5>
-               <p class="artist">Artist</p>
-               <audio controls ></audio>
-           </div>
-       </div>
-    </div>
-    <script src="../data.js"></script>
-    <script src="../player.js"></script>
-    <script src="../index.js"></script>   
+  <div class="player">
+    <i class="material-icons menu">list</i>
+    <h4>
+      <i class="material-icons">equalizer</i>
+      Strong
+    </h4> 
+      <div class="card no-margin">
+        <div class="card-image"></div>
+          <div class="card-content">
+            <h5>Title</h5>
+            <p class="artist">Artist</p>
+            <div class="controls">
+              <i
+                onclick="player.goBack()"
+                class="material-icons"
+              > skip_previous </i>
+              <audio controls></audio>
+              <i
+                class="material-icons"
+                onclick="player.next()"
+              >skip_next</i>
+            </div>
+          </div>
+      </div>
+  </div>
+    <script src="../js/data.js"></script>
+    <script src="../js/player.js"></script>
+    <script src="../js/index.js"></script>   
 </body>
 </html>
